pkg/front_end/testcases/inference/infer_type_on_var2.dart.strong.expect
// Formatted problems:
//
// pkg/front_end/testcases/inference/infer_type_on_var2.dart:10:36: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.
// Try changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.
//   x = /*error:INVALID_ASSIGNMENT*/ "hi";
//                                    ^

library test;
import self as self;
import "dart:core" as core;

static method test2() → dynamic {
  core::int x = 3;
  x = let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/inference/infer_type_on_var2.dart:10:36: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.
Try changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.
  x = /*error:INVALID_ASSIGNMENT*/ \"hi\";
                                   ^" in "hi" as{TypeError} core::int;
}
static method main() → dynamic {}
